--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "vue": "^2.5.21",
+    "vue-tabs-component": "^1.5.0",
     "vue-types": "^1.3.4"
   },
   "devDependencies": {
